force-app/main/default/objects/JBT_RET_OTH_IND1_VW__x.object
<CustomObject>
    <fields>
        <fullName>ACAD_CAREER__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_PROFILE_MAJ_TERM.ACAD_CAREER</description>
        <externalDeveloperName>ACAD_CAREER</externalDeveloperName>
        <label>Career</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_INDEX__c</fullName>
        <description>Data sourced from PS_ASU_UGCILSTU_VW.ASU_CI_MAX_OVERALL</description>
        <externalDeveloperName>CI_INDEX</externalDeveloperName>
        <label>CI Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUM_GPA__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_PROFILE_MAJ_TERM.CUM_GPA</description>
        <externalDeveloperName>CUM_GPA</externalDeveloperName>
        <label>Cumulative GPA</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EADVISOR__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_PROFILE_MAJ_TERM.ASU_TRACK_STAT_DES</description>
        <externalDeveloperName>EADVISOR</externalDeveloperName>
        <label>eAdvisor Indicator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_PROFILE_MAJ_TERM.EMPLID</description>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Retention Indicator (external)</relationshipLabel>
        <relationshipName>Retention_Indicator_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>ENROLLED_NEXT_TERM__c</fullName>
        <description>Data sourced from DERIVED.ENROLLED_NEXT_TERM</description>
        <externalDeveloperName>ENROLLED_NEXT_TERM</externalDeveloperName>
        <label>Enrolled in Next Term</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEXT_TERM__c</fullName>
        <description>Data sourced from Derived.NEXT_TERM</description>
        <externalDeveloperName>NEXT_TERM</externalDeveloperName>
        <label>Next Term</label>
        <length>4</length>
        <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Retention Indicator (external)</relationshipLabel>
        <relationshipName>Retention_Indicator_external1</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>STRM__c</fullName>
        <description>Data sourced from ASUDW.ASU_STDNT_PROFILE_MAJ_TERM.STRM</description>
        <externalDeveloperName>STRM</externalDeveloperName>
        <label>Current Term</label>
        <length>4</length>
        <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Retention Indicator (external)</relationshipLabel>
        <relationshipName>Retention_Indicator_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/1J7SAAfMDmROO4GCDylJArD3JjAbqywnLf4hcYXj14J0/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>JBT_RET_OTH_IND1_VW</externalName>
    <label>Retention Indicator (external)</label>
    <pluralLabel>Retention Indicator (external)</pluralLabel>
</CustomObject>